# EmbeddedGUI

./: .clang-format  .coverage  .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  requirements.txt  setup.bat  setup.sh  start_app.bat  test_output.txt  test_output_full.txt
example/HelloAPP/: CMakeLists.txt  app_egui_config.h  build.mk  egui_page_0.c  egui_page_0.h  egui_page_1.c  egui_page_1.h  egui_page_base.c  readme.md  uicode.c  uicode.h  uicode_disp0.c  uicode_disp0.h
example/HelloBasic/: CMakeLists.txt  app_egui_config.h  build.mk  uicode.c  uicode.h  uicode_disp0.c
example/HelloCustomWidgets/: CMakeLists.txt  HelloCustomWidgets_design.md  HelloCustomWidgets_plan.md  app_egui_config.h  build.mk  create_custom_widget.py  uicode.c  uicode.h
example/HelloPerformance/: CMakeLists.txt  app_egui_config.h  benchmark_capability_retention.md  benchmark_environment_retention.md  benchmark_override_retention.md  build.mk  codec_heap_override_retention.md  egui_view_test_performance.c  egui_view_test_performance.h  fast_path_retention.md  file_image_port_io.c  file_image_port_io.h  macro_cleanup_summary.md  macro_decision_matrix.md  ram_tracking.md  stack_heap_policy_retention.md  static_ram_override_retention.md  text_transform_heap_override_retention.md  uicode.c  uicode_disp0.c  uicode_disp0.h
example/HelloSizeAnalysis/: CMakeLists.txt  README.md  build.mk
example/HelloVirtual/: CMakeLists.txt  build.mk  readme.md  uicode_disp0.h
porting/pc/: CMakeLists.txt  EmbeddedGUI.VisualStudio.props  EmbeddedGUI_PC_Simulator.sln  EmbeddedGUI_PC_Simulator.vcxproj  EmbeddedGUI_PC_Simulator.vcxproj.filters  Makefile.base  api_pc.c  build.mk  egui_hal_sdl_sim.c  egui_hal_sdl_sim.h  egui_port_pc.c  main.c  sdl_port.c  sdl_port.h  stb_image_write.h
porting/pc_test/: CMakeLists.txt  Makefile.base  build.mk  main.c  port_api.c  port_api.h
src/: CMakeLists.txt  build.mk  egui.h
src/anim/: egui_animation.c  egui_animation.h  egui_animation_alpha.c  egui_animation_alpha.h  egui_animation_color.c  egui_animation_color.h  egui_animation_resize.c  egui_animation_resize.h  egui_animation_scale_size.c  egui_animation_scale_size.h  egui_animation_set.c  egui_animation_set.h  egui_animation_timeline.c  egui_animation_timeline.h  egui_animation_translate.c  egui_animation_translate.h  egui_animation_value.c  egui_animation_value.h  egui_interpolator.c  egui_interpolator.h  egui_interpolator_accelerate.c  egui_interpolator_accelerate.h  egui_interpolator_accelerate_decelerate.c  egui_interpolator_accelerate_decelerate.h  egui_interpolator_anticipate.c  egui_interpolator_anticipate.h  egui_interpolator_anticipate_overshoot.c  egui_interpolator_anticipate_overshoot.h  egui_interpolator_bounce.c  egui_interpolator_bounce.h  egui_interpolator_cycle.c  egui_interpolator_cycle.h  egui_interpolator_decelerate.c  egui_interpolator_decelerate.h  egui_interpolator_linear.c  egui_interpolator_linear.h  egui_interpolator_overshoot.c  egui_interpolator_overshoot.h  egui_view_fade.c  egui_view_fade.h
src/app/: egui_activity.c  egui_activity.h  egui_dialog.c  egui_dialog.h  egui_msgbox.c  egui_msgbox.h  egui_page_base.c  egui_page_base.h  egui_toast.c  egui_toast.h  egui_toast_std.c  egui_toast_std.h
src/background/: egui_background.c  egui_background.h  egui_background_color.c  egui_background_color.h  egui_background_gradient.c  egui_background_gradient.h  egui_background_image.c  egui_background_image.h
src/canvas/: egui_canvas.c  egui_canvas.h  egui_canvas_bezier.c  egui_canvas_circle_hq.c  egui_canvas_compact.c  egui_canvas_compact.h  egui_canvas_ellipse.c  egui_canvas_fill_aa_internal.h  egui_canvas_gradient.c  egui_canvas_gradient.h  egui_canvas_line.c  egui_canvas_line_hq.c  egui_canvas_polygon.c  egui_canvas_transform.c  egui_canvas_transform_cache.h  egui_canvas_triangle.c
src/config/: egui_config.h  egui_config_anim_default.h  egui_config_canvas_default.h  egui_config_core_default.h  egui_config_debug_default.h  egui_config_default.h  egui_config_fast_path_default.h  egui_config_font_default.h  egui_config_multi_default.h  egui_config_theme_default.h  egui_config_validate.h  egui_config_widget_default.h
src/core/: egui_api.c  egui_api.h  egui_canvas.c  egui_canvas.h  egui_canvas_bezier.c  egui_canvas_circle_hq.c  egui_canvas_compact.c  egui_canvas_compact.h  egui_canvas_ellipse.c  egui_canvas_fill_aa_internal.h  egui_canvas_gradient.c  egui_canvas_gradient.h  egui_canvas_line.c  egui_canvas_line_hq.c  egui_canvas_polygon.c  egui_canvas_transform.c  egui_canvas_transform_cache.h  egui_canvas_triangle.c  egui_common.c  egui_common.h  egui_config.h  egui_config_canvas_default.h  egui_config_debug_default.h  egui_config_default.h  egui_config_fast_path_default.h  egui_config_multi_default.h  egui_config_theme_default.h  egui_config_widget_default.h  egui_core.c  egui_core.h  egui_core_activity.c  egui_core_activity.h  egui_core_activity_anim.c  egui_core_activity_force.c  egui_core_activity_stack.c  egui_core_animation.c  egui_core_debug.c  egui_core_debug_mem.c  egui_core_debug_overlay_draw.c  egui_core_debug_overlay_region.c  (+84 more)
src/font/: egui_font.c  egui_font.h  egui_font_lattice.c  egui_font_lattice.h  egui_font_std.c  egui_font_std.h  egui_font_ttf.c  egui_font_ttf.h
src/image/: egui_image.c  egui_image.h  egui_image_decode_utils.c  egui_image_decode_utils.h  egui_image_file.c  egui_image_file.h  egui_image_qoi.c  egui_image_qoi.h  egui_image_rle.c  egui_image_rle.h  egui_image_std.c  egui_image_std.h  egui_image_svg.c  egui_image_svg.h  egui_image_svg_alloc.h
src/mask/: egui_mask.c  egui_mask.h  egui_mask_circle.c  egui_mask_circle.h  egui_mask_gradient.c  egui_mask_gradient.h  egui_mask_image.c  egui_mask_image.h  egui_mask_round_rectangle.c  egui_mask_round_rectangle.h
src/resource/: egui_i18n.c  egui_i18n.h  egui_icon_material_symbols.h  egui_res_circle_info.c  egui_res_font_material_symbols_common_16_4.c  egui_res_font_material_symbols_common_20_4.c  egui_res_font_material_symbols_common_24_4.c  egui_resource.h  (+21 more)
(+2696 files in other folders)
